Fix alignment of userlist dropdowns with detail

--- a/css/rs.css
+++ b/css/rs.css
@@ -68,7 +68,7 @@
 }
 
 poster {
-    margin: 5px;
+    margin: 4px;
     border-radius: 3px;
     min-width: 150px;
     min-height: 221px;
@@ -82,6 +82,7 @@ poster > a {
 poster > img,
 poster > a > img {
     width: 150px;
+    max-height: 221px;
     object-fit: cover;
     object-position: center;
     border-radius: .3rem;
@@ -210,24 +211,29 @@ detail-episodeNumber {
     position: absolute;
     top: 0;
     z-index: 1;
-    min-width: 325px;
+    width: 325px;
     min-height: 231px;
     background-color: rgba(249, 249, 249, 0.95);
     border-style: outset;
     border-width: thin;
     margin-bottom: 5px;
+    padding-bottom: 3px;
+    padding-left: 5px;
 }
 
-.film-dropdown-col-1,.film-dropdown-col-3,.film-dropdown-col-5,.film-dropdown-col-7,.film-dropdown-col-9,.film-dropdown-col-11 {
+.detail-right {
     left: 170px;
     border-left-style: none;
+    border-right-style: outset;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
     border-top-right-radius: 3%;
     border-bottom-right-radius: 3%;
 }
-.film-dropdown-col-2,.film-dropdown-col-4,.film-dropdown-col-6,.film-dropdown-col-8,.film-dropdown-col-10,.film-dropdown-col-12 {
+
+.detail-left {
     left: -305px;
+    border-left-style: outset;
     border-right-style: none;
     border-top-left-radius: 3%;
     border-bottom-left-radius: 3%;
@@ -378,27 +384,19 @@ detail-episode-rating {
 	border-color: #2e6da4;
 }
 
+/* Small */
+@media (min-width:576px) {
+    .rating-detail {
+        width: 80%;
+        left: 10%;
+    }
+}
+
+/* Medium */
 @media (min-width:768px) {
     .rating-detail {
         width: 70%;
         left: 15%;
-    }
-
-    .film-dropdown-col-1,.film-dropdown-col-2,.film-dropdown-col-4,.film-dropdown-col-5,.film-dropdown-col-7,.film-dropdown-col-8,.film-dropdown-col-10,.film-dropdown-col-11 {
-        left: 170px;
-        border-left-style: none;
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
-        border-top-right-radius: 3%;
-        border-bottom-right-radius: 3%;
-    }
-    .film-dropdown-col-3,.film-dropdown-col-6,.film-dropdown-col-9,.film-dropdown-col-12 {
-        left: -305px;
-        border-right-style: none;
-        border-top-left-radius: 3%;
-        border-bottom-left-radius: 3%;
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
     }
 
     .footer {
@@ -407,50 +405,18 @@ detail-episode-rating {
     }
 }
 
+/* Large */
 @media (min-width:992px) {
     .rating-detail {
         width: 60%;
         left: 20%;
     }
-
-    .film-dropdown-col-1,.film-dropdown-col-2,.film-dropdown-col-5,.film-dropdown-col-6,.film-dropdown-col-9,.film-dropdown-col-10 {
-        left: 170px;
-        border-left-style: none;
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
-        border-top-right-radius: 3%;
-        border-bottom-right-radius: 3%;
-    }
-    .film-dropdown-col-3,.film-dropdown-col-4,.film-dropdown-col-7,.film-dropdown-col-8,.film-dropdown-col-11,.film-dropdown-col-12 {
-        left: -305px;
-        border-right-style: none;
-        border-top-left-radius: 3%;
-        border-bottom-left-radius: 3%;
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
-    }
 }
 
+/* X-Large */
 @media (min-width:1200px) {
     .rating-detail {
         width: 46%;
         left: 27%;
-    }
-
-    .film-dropdown-col-1,.film-dropdown-col-2,.film-dropdown-col-3,.film-dropdown-col-4,.film-dropdown-col-7,.film-dropdown-col-8,.film-dropdown-col-9,.film-dropdown-col-10 {
-        left: 170px;
-        border-left-style: none;
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
-        border-top-right-radius: 3%;
-        border-bottom-right-radius: 3%;
-    }
-    .film-dropdown-col-5,.film-dropdown-col-6,.film-dropdown-col-11,.film-dropdown-col-12 {
-        left: -305px;
-        border-right-style: none;
-        border-top-left-radius: 3%;
-        border-bottom-left-radius: 3%;
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
     }
 }
